# Actix_web_

./: README.md
app/: Cargo.toml
app/src/: main.rs
databases/: .env  .gitignore  Cargo.toml
databases/src/: main.rs
errors/: Cargo.toml
extractors/: Cargo.toml  README.md
extractors/src/: main.rs
first_app/: Cargo.toml
hello_world/src/: main.rs
middleware/: Cargo.toml
middleware/src/: main.rs
requests/src/: main.rs
responses/src/: main.rs
static_file/: Cargo.toml
static_file/src/: main.rs
tls_https/: .gitignore  Cargo.toml  cert.pem  key.pem
tls_https/src/: main.rs
url_dispatch/: Cargo.toml
url_dispatch/src/: main.rs
websocket/: Cargo.toml
