[package]
name = "databases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
mongoose = "0.1.16"
mongodb =  "2.3.1"
dotenv = "0.15"
regex = "1"
lazy_static = "1"
bcrypt = "0.10"
serde_json = "1.0"
actix-service = "2.0.2"
futures-util = "0.3.30"
